crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_extract_umis.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "inputs": {
    "accepted_kinds": [
      "PairedEnd"
    ],
    "kind": "PairedEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "Retention"
    ],
    "invariants": [
      "reads_out <= reads_in",
      "dedup_rate in [0, 1]",
      "counts are non-negative"
    ],
    "notes": "UMI processing may drop reads during deduplication."
  },
  "outputs": {
    "emits_fastq": true,
    "kind": "PairedEnd",
    "possible_kinds": [
      "PairedEnd"
    ]
  },
  "retention": {
    "definition": "reads_out / reads_in; bases_out / bases_in",
    "may_drop": [
      "reads",
      "pairs",
      "bases"
    ],
    "may_drop_reads": true,
    "must_preserve_pairing": true,
    "preserves": [
      "pairing_metadata"
    ],
    "units": "reads,bases"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.extract_umis",
  "tool_ids": [
    "umi_tools"
  ]
}
