crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_index_reference.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
assertion_line: 20
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "inputs": {
    "kind": "ReferenceFasta"
  },
  "metrics": {},
  "outputs": {
    "emits_fastq": false,
    "kind": "ReferenceIndex"
  },
  "retention": {
    "definition": "indexed_reference_entries_out == reference_entries_in",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": false,
    "preserves": [
      "reference_sequence_records"
    ],
    "units": "reference_entries"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.index_reference",
  "tool_ids": [
    "star",
    "samtools"
  ]
}
