crates/bijux-dna-domain-fastq/tests/snapshots/bijux-dna-domain-fastq__contracts__stage_contract__fastq_infer_asvs.snap
---
source: crates/bijux-dna-domain-fastq/tests/contracts/stage_contract_snapshots.rs
expression: "bijux_dna_testkit::snapshot_normalize_json(&json)"
---
{
  "amplicon_semantics": {
    "decision_semantics": "legal in amplicon mode; outputs denoised sequence variants"
  },
  "inputs": {
    "accepted_kinds": [
      "SingleEnd",
      "PairedEnd",
      "Merged"
    ],
    "kind": "SingleEnd"
  },
  "metrics": {
    "classes": [
      "Integrity",
      "Composition"
    ],
    "invariants": [
      "asv_count >= 0",
      "sample_count >= 0",
      "counts are non-negative"
    ],
    "notes": "ASV inference converts denoised amplicon reads into a deterministic feature table and representative sequences."
  },
  "outputs": {
    "emits_fastq": false,
    "kind": "AmpliconTable",
    "possible_kinds": [
      "AmpliconTable"
    ]
  },
  "retention": {
    "definition": "non-empty table rows and stable sample identifiers",
    "may_drop": [],
    "may_drop_reads": false,
    "must_preserve_pairing": false,
    "preserves": [
      "sample_ids",
      "abundance_units"
    ],
    "units": "rows,samples"
  },
  "schema_version": "bijux.stage_contract.v1",
  "stage_id": "fastq.infer_asvs",
  "tool_ids": []
}
